Style bg and content from initial commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p><a href="#" target="_blank">Download Excursion (Coming soon!)</a></p>
+    <p>
+      <a href="#" target="_blank" class="link--download"
+        >Download Excursion (Coming soon!)</a
+      >
+    </p>
   </body>
 </html>
