--- a/index.html
+++ b/index.html
@@ -13,5 +13,22 @@
         >Download Excursion (Coming soon!)</a
       >
     </p>
+    <video autoplay muted loop>
+      <source src="resources/video/excursion.mp4" />
+    </video>
+    <h2>Your personal travel guide</h2>
+    <p>
+      Excursion remembers places you like, and recommends new points of interest
+      around you.
+    </p>
+    <div><img src="resources/img/camp.jpg" alt="camp" /></div>
+    <div><img src="resources/img/phone.png" alt="phone-icon" /></div>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p>
+      <a href="#" target="_blank" class="link--download"
+        >Download Excursion (Coming soon!)</a
+      >
+    </p>
+    <footer>©Excursion</footer>
   </body>
 </html>
