Style remaining content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       Excursion remembers places you like, and recommends new points of interest
       around you.
     </p>
-    <div><img src="resources/img/camp.jpg" alt="camp" /></div>
+    <div><img src="resources/img/camp.jpg" alt="camp" class="img--main" /></div>
     <div><img src="resources/img/phone.png" alt="phone-icon" /></div>
     <h2>Coming Soon for iPhone and Android</h2>
     <p>
